; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genemit.c_max_operand_vec.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genemit.c_max_operand_vec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@max_opno = common dso_local global i32 0, align 4
@max_dup_opno = common dso_local global i32 0, align 4
@max_scratch_opno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @max_operand_vec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max_operand_vec(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @XVECLEN(i32 %7, i32 %8)
  store i32 %9, i32* %5, align 4
  store i32 -1, i32* @max_opno, align 4
  store i32 -1, i32* @max_dup_opno, align 4
  store i32 -1, i32* @max_scratch_opno, align 4
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %20, %2
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @XVECEXP(i32 %15, i32 %16, i32 %17)
  %19 = call i32 @max_operand_1(i32 %18)
  br label %20

20:                                               ; preds = %14
  %21 = load i32, i32* %6, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %6, align 4
  br label %10

23:                                               ; preds = %10
  %24 = load i32, i32* @max_opno, align 4
  %25 = add nsw i32 %24, 1
  ret i32 %25
}

declare dso_local i32 @XVECLEN(i32, i32) #1

declare dso_local i32 @max_operand_1(i32) #1

declare dso_local i32 @XVECEXP(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
